# cli

./: main.py  pyproject.toml  readme.md
cli/: commands.py  files.py  interface.py  session.py  theme.py  tools.py
models/: gemma3-12b-fc.modelfile  gemma3-27b-fc.modelfile
tools/: add_todo.py  calculate.py  clear_todos.py  complete_todo.py  create_directory.py  delete_directory.py  delete_file.py  get_current_directory.py  get_environment_variable.py  get_file_size.py  get_system_info.py  get_time.py  get_weather.py  list_expenses.py  list_files.py  list_todos.py  move_file.py  read_file.py  record_expense.py  run_command.py  scrape_url.py  search_files.py  web_search.py  write_file.py
